--- a/src/app/component/ex-form/number-field/number-field.component.css
+++ b/src/app/component/ex-form/number-field/number-field.component.css
@@ -8,3 +8,13 @@
 .asterik{
   color: red;
 }
+
+/* remove spinner from number field*/
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance:textfield;
+}
