--- a/src/app/component/json-form/json-form.component.html
+++ b/src/app/component/json-form/json-form.component.html
@@ -169,3 +169,10 @@
     <pre>
     formGroupForm?.value|json}}
     </pre> -->
+
+
+
+
+<!--.mat-form-field-flex > .mat-form-field-infix {-->
+<!--padding: 0.35em 0px !important;-->
+<!--}-->
