--- a/src/app/component/ex-form/dashboard/dashboard.component.html
+++ b/src/app/component/ex-form/dashboard/dashboard.component.html
@@ -1,10 +1,10 @@
-<div style="margin:80px;">
+<div style="margin:15px 20%;">
   <div>
 
     <mat-form-field appearance="outline">
       <mat-label>Entity</mat-label>
-      <mat-select [(value)]="selected">
-        <mat-option *ngFor="let opt of schema" [value]="opt.name">
+      <mat-select [(value)]="selected" (selectionChange)="reinitialize()">
+        <mat-option *ngFor="let opt of entity" [value]="opt.name">
           {{opt.name}}
         </mat-option>
       </mat-select>
@@ -16,5 +16,10 @@
   </div>
 
 </div>
+
     <app-form [formName]= "selected">
-    </app-form>
+ </app-form>
+
+<!--<app-step-form-->
+  <!--[schema]="schema">-->
+<!--</app-step-form>-->
