Implementation of JsonEditor(without live changes in form)

--- a/src/app/component/ex-form/form.component.html
+++ b/src/app/component/ex-form/form.component.html
@@ -4,15 +4,15 @@
 
 
 
-<app-accordian *ngIf="modifiedUiSchema.type =='Group'"
-               [uiSchema]="modifiedUiSchema">
-</app-accordian>
+<!--<app-accordian *ngIf="modifiedUiSchema.type =='Group'"-->
+               <!--[uiSchema]="modifiedUiSchema">-->
+<!--</app-accordian>-->
 
 
 
-<app-step-form *ngIf="modifiedUiSchema.type =='Group'"
-               [uiSchema]="modifiedUiSchema">
-</app-step-form>
+<!--<app-step-form *ngIf="modifiedUiSchema.type =='Group'"-->
+               <!--[uiSchema]="modifiedUiSchema">-->
+<!--</app-step-form>-->
 
 <app-tab *ngIf="modifiedUiSchema.type =='Group'"
          [uiSchema]="modifiedUiSchema">
