--- a/src/app/component/ex-form/viewer/basic/simple/simple.component.css
+++ b/src/app/component/ex-form/viewer/basic/simple/simple.component.css
@@ -34,7 +34,7 @@
   background:#fff;
   box-shadow: 0 2px 6px 4px rgba(0,0,0,.14);
   border-radius: 15px;
-  margin: 15px 20%;
+  /*margin: 15px 20%;*/
   padding: 20px;
 }
 
