--- a/src/app/component/ex-form/viewer/group/tabs/tab/tab.component.css
+++ b/src/app/component/ex-form/viewer/group/tabs/tab/tab.component.css
@@ -31,9 +31,9 @@
   background:#fff;
   box-shadow: 0 2px 6px 4px rgba(0,0,0,.14);
   border-radius: 15px;
-  margin: 15px 20%;
   padding: 20px;
 }
+/*margin: 15px 20%;*/
 
 
 .padding-right-zero{
