--- a/src/app/json-editor/ui-schema/ui-schema.component.html
+++ b/src/app/json-editor/ui-schema/ui-schema.component.html
@@ -1,9 +1,12 @@
-<mat-card class="example-card">
-  <mat-card-header>
-    <mat-card-title>UI Schema</mat-card-title>
-  </mat-card-header>
+<div style="margin-bottom: 10px;">
+  <mat-card>
+    <mat-card-header>
+      <mat-card-title>UI Schema</mat-card-title>
+    </mat-card-header>
 
-  <mat-card-content>
-    <json-editor [options]="uiSchemaEditorOptions" [data]="uiSchemaData"></json-editor>
-  </mat-card-content>
-</mat-card>
+    <mat-card-content>
+      <json-editor [options]="uiSchemaEditorOptions" [data]="uiSchemaData" (keyup)="getData($event)"></json-editor>
+    </mat-card-content>
+  </mat-card>
+
+</div>
